--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "crypto"]
 	path = crypto
-	url = git@github.com:embedCreativity/crypto.git
+	url = https://github.com/embedCreativity/crypto.git
